cabal-version:      2.4
name:               sigell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Magic_RB
maintainer:         magic_rb@redalder.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable sigell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Config,
                      CmdLine

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options: -threaded
    build-depends:    base >=4.13.0.0,
                      aeson ^>=1.5.6.0,
                      unix ^>=2.7.2.2,
                      vector ^>=0.12.1.2,
                      bytestring ^>=0.10.10.0,
                      unordered-containers ^>=0.2.10.0,
                      cmdargs ^>=0.10.20
    hs-source-dirs:   app
    default-language: Haskell2010
