cabal-version:      2.4

-- SPDX-FileCopyrightText: 2026 Richard Brežák <magic_rb@redalder.org> and NixNG contributors
--
-- SPDX-License-Identifier: CC0-1.0

name:               sigell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Magic_RB
maintainer:         magic_rb@redalder.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable sigell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Config,
                      CmdLine

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options: -threaded
    build-depends:    base,
                      aeson,
                      unix,
                      vector,
                      bytestring,
                      unordered-containers,
                      cmdargs
    hs-source-dirs:   app
    default-language: Haskell2010
