cabal-version:      3.8
name:               file-hammer
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             magic_rb
maintainer:         magic_rb@redalder.org
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -fwarn-missing-import-lists

executable file-hammer
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Cli,
      Config,
      Action,
      Orphans,
    -- other-extensions:
    default-extensions:
      ImportQualifiedPost,
      DeriveAnyClass,
      BlockArguments,
      NoFieldSelectors,
      DuplicateRecordFields,
      MultiWayIf,
      OverloadedStrings,
    build-depends:
      base ^>=4.20.2.0,
      aeson,
      unordered-containers,
      directory,
      unix,
      text,
      bytestring,
      filepath,
      extra,
      path,
      microlens,
      microlens-th,
      microlens-mtl,
      mtl,
      transformers,
      optparse-applicative,
      bytestring-aeson-orphans,
      tree-diff,
      exceptions,
      hashable,
      pretty,
      Glob,
      monad-logger,
      nixng,
    hs-source-dirs:   app
    default-language: GHC2021
